# auriga

./: .editorconfig  .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  install.sh  pyproject.toml
.agent-orchestrator/: config.json  orchestrator.db
.agent-orchestrator/context/: annotations.yaml  examples.md  map.md  principles.md
.agents/skills/code-review/: SKILL.md
.auriga/: auriga.db  doctor-mcp.json
.auriga/classifiers/: agent-health.json
.auriga/context/: annotations.yaml  examples.md  map.md  principles.md
.auriga/presets/: default.json
.auriga/prompts/: coding-assistant.json
.claude/: settings.json
.claude/commands/: aorch-review.md
.github/workflows/: ci.yml  release.yml
crates/agent/: Cargo.toml
crates/agent/src/: bridge.rs  command.rs  config.rs  lib.rs  message.rs  provider.rs  session.rs  tool.rs
crates/agent/src/providers/: claude.rs  codex.rs  mod.rs
crates/agent/tests/: integration.rs
crates/app/: Cargo.toml
crates/app/benches/: integration.rs
crates/app/src/: app.rs  config.rs  context.rs  helpers.rs  input.rs  main.rs  skills_storage.rs  threads.rs  types.rs
crates/app/src/defaults/: coding-assistant.json  default-preset.json  examples.md  map.md  principles.md
crates/app/tests/: integration.rs
crates/benches/: Cargo.toml
crates/benches/benches/: integration.rs  render_pipeline.rs
crates/benches/src/: lib.rs
crates/classifier/: Cargo.toml
crates/classifier/src/: classifier_trait.rs  config.rs  lib.rs  registry.rs  runtime.rs  schema.rs  types.rs
crates/claude-log/: Cargo.toml
crates/claude-log/src/: lib.rs  parser.rs  types.rs  watcher.rs
crates/claude-log/tests/: integration.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: integration.rs
crates/core/: Cargo.toml
crates/core/benches/: core_benches.rs
crates/core/src/: agent.rs  file_activity.rs  file_tree.rs  focus.rs  lib.rs  scrollable.rs  trace.rs  turn.rs
crates/core/tests/: integration.rs
crates/grid/: Cargo.toml
crates/grid/benches/: grid_benches.rs
crates/grid/src/: layout.rs  lib.rs
crates/grid/tests/: integration.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: doctor.rs  handler.rs  jsonrpc.rs  lib.rs
crates/mcp/tests/: integration.rs
crates/ml/: Cargo.toml
crates/ml/src/: features.rs  lib.rs  model.rs  runtime.rs  schema.rs  training.rs
crates/pty/: Cargo.toml
crates/pty/src/: lib.rs
crates/pty/tests/: integration.rs
crates/skills/: Cargo.toml
crates/skills/src/: code_review.rs  lib.rs  registry.rs  skill_trait.rs  types.rs
crates/skills/tests/: integration.rs
crates/storage/: Cargo.toml
crates/storage/src/: classifications.rs  db.rs  lib.rs  ml.rs  query.rs  schema.rs  thread.rs  traces.rs
crates/storage/tests/: integration.rs
crates/terminal/: Cargo.toml
crates/terminal/benches/: terminal_benches.rs
crates/terminal/src/: lib.rs
crates/terminal/tests/: integration.rs
crates/types/: Cargo.toml
crates/types/src/: agent.rs  agent_config.rs  classifier.rs  classifier_config.rs  claude.rs  claude_settings.rs  codex.rs  command.rs  file_activity.rs  file_tree.rs  focus.rs  lib.rs  message.rs  provider.rs  scrollable.rs  session.rs  skill.rs  tool.rs  trace.rs  turn.rs
crates/types/tests/: integration.rs
crates/widgets/: Cargo.toml
crates/widgets/benches/: widget_benches.rs
crates/widgets/src/: agent_list.rs  agent_pane.rs  classifier_panel.rs  classifiers_page.rs  context_page.rs  database_page.rs  doctor_page.rs  file_activity.rs  file_tree_widget.rs  lib.rs  nav_bar.rs  prompts_page.rs  recent_activity.rs  settings_page.rs  status_bar.rs  token_chart.rs
crates/widgets/tests/: integration.rs
docs/: design.md  interfaces.md  state.md  types.md
docs/architecture/: crates.md  event-loop.md  ui.md
docs/cli/: usage.md
docs/foundation/: design.md  interfaces.md  state.md  types.md
docs/systems/: classifiers.md  files.md  mcp.md  skills.md  storage.md  traces.md
scripts/: build.py
spec/: architecture.md  crates.md  v1.md
spec/architecture/: crates.md  event-loop.md  ui.md
spec/cli/: usage.md
spec/primitives/: agent.md  file-activity.md  grid.md  widget.md
spec/systems/: classifiers.md  files.md  mcp.md  skills.md  storage.md  traces.md
todos/: critical.md  major.md  moderate.md
