[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/grid",
    "crates/widgets",
    "crates/terminal",
    "crates/pty",
    "crates/app",
    "crates/benches",
]

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

ratatui = "0.28"
crossterm = "0.28"
portable-pty = "0.8"
alacritty_terminal = "0.26.0-rc1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
notify = "6"
ignore = "0.4"
