[workspace]
resolver = "2"
default-members = ["crates/app"]
members = [
    "crates/types",
    "crates/core",
    "crates/grid",
    "crates/widgets",
    "crates/terminal",
    "crates/pty",
    "crates/mcp",
    "crates/claude-log",
    "crates/storage",
    "crates/skills",
    "crates/agent",
    "crates/cli",
    "crates/app",
]

[workspace.dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

ratatui = "0.28"
crossterm = "0.28"
portable-pty = "0.8"
alacritty_terminal = "0.26.0-rc1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
notify = "6"
ignore = "0.4"
tiny_http = "0.12"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
self_update = { version = "0.41", features = ["archive-tar", "compression-flate2"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2"
