[package]
name = "orchestrator-app"
version = "0.1.0"
edition = "2021"

[dependencies]
orchestrator-agent = { path = "../agent" }
orchestrator-core = { path = "../core" }
orchestrator-grid = { path = "../grid" }
orchestrator-widgets = { path = "../widgets" }
orchestrator-terminal = { path = "../terminal" }
orchestrator-pty = { path = "../pty" }
orchestrator-claude-log = { path = "../claude-log" }
orchestrator-mcp = { path = "../mcp" }
orchestrator-storage = { path = "../storage" }
orchestrator-classifier = { path = "../classifier" }
orchestrator-skills = { path = "../skills" }
orchestrator-ml = { path = "../ml" }
serde = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
alacritty_terminal = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
