[package]
name = "auriga-app"
version = "0.1.0"
edition = "2021"

[dependencies]
auriga-agent = { path = "../agent" }
auriga-core = { path = "../core" }
auriga-grid = { path = "../grid" }
auriga-widgets = { path = "../widgets" }
auriga-terminal = { path = "../terminal" }
auriga-pty = { path = "../pty" }
auriga-claude-log = { path = "../claude-log" }
auriga-mcp = { path = "../mcp" }
auriga-storage = { path = "../storage" }
auriga-classifier = { path = "../classifier" }
auriga-skills = { path = "../skills" }
auriga-ml = { path = "../ml" }
serde = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
alacritty_terminal = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
