[package]
name = "auriga-app"
version.workspace = true
edition = "2021"

[dependencies]
auriga-agent = { path = "../agent" }
auriga-core = { path = "../core" }
auriga-grid = { path = "../grid" }
auriga-widgets = { path = "../widgets" }
auriga-terminal = { path = "../terminal" }
auriga-pty = { path = "../pty" }
auriga-claude-log = { path = "../claude-log" }
auriga-mcp = { path = "../mcp" }
auriga-storage = { path = "../storage" }
auriga-skills = { path = "../skills" }
serde = { workspace = true }
serde_json = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
alacritty_terminal = { workspace = true }
notify = { workspace = true }
ignore = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "integration"
harness = false
