[package]
name = "auriga-benches"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
auriga-core = { path = "../core" }
auriga-grid = { path = "../grid" }
auriga-widgets = { path = "../widgets" }
auriga-terminal = { path = "../terminal" }
ratatui = { workspace = true }
alacritty_terminal = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "render_pipeline"
harness = false

[[bench]]
name = "integration"
harness = false
