[package]
name = "auriga-classifier"
version = "0.1.0"
edition = "2021"

[dependencies]
auriga-types = { path = "../types" }
auriga-core = { path = "../core" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
