[package]
name = "auriga-core"
version.workspace = true
edition = "2021"

[dependencies]
auriga-types = { path = "../types" }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "core_benches"
harness = false
