[package]
name = "auriga-mcp"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tiny_http = { workspace = true }
tracing = { workspace = true }
auriga-storage = { path = "../storage" }
auriga-classifier = { path = "../classifier" }
auriga-core = { path = "../core" }
auriga-ml = { path = "../ml" }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
