[package]
name = "auriga-ml"
version = "0.1.0"
edition = "2021"

[dependencies]
auriga-core = { path = "../core" }
auriga-classifier = { path = "../classifier" }
linfa = "0.8"
linfa-trees = { version = "0.8", features = ["serde"] }
ndarray = "0.16"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
