[package]
name = "auriga-storage"
version.workspace = true
edition = "2021"

[dependencies]
auriga-core = { path = "../core" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
