[package]
name = "auriga-widgets"
version = "0.1.0"
edition = "2021"

[dependencies]
auriga-core = { path = "../core" }
auriga-grid = { path = "../grid" }
auriga-terminal = { path = "../terminal" }
auriga-skills = { path = "../skills" }
crossterm = { workspace = true }
ratatui = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }

[[bench]]
name = "widget_benches"
harness = false
